--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-  <p>=]</p>
-  <p>ready.getsetbro</p>
-  <p>you get it.</p>
+    <h1>=]</h1>
+    <p>ready.get.set.bro</p>
+    <p>you get it.</p>
   </body>
 </html>
